tests/misc/errors/vue/custom_block.vue
<custom lang="js">
const foo = "</";
</custom>
